# job-search

./: .gitignore  DESIGN.md  PRODUCT.md  app.py  docker-compose.yml  pyproject.toml
backend/: Dockerfile  package.json
backend/src/: db.ts  server.ts
frontend/: Dockerfile  index.html  package.json
frontend/src/: App.tsx  index.css
microservices/job-search/: Dockerfile  app.py  config.py  models.py  pyproject.toml  services.py
