[project]
name = "mcp-job-search"
version = "0.1.0"
description = "LinkedIn Job Search Microservice"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "langchain>=1.2.15",
    "langchain-openai>=1.1.16",
    "langchain-openrouter>=0.2.3",
    "mcp-use>=1.7.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
]
